--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container text-center">
     <h1 class="text-center text-warning">
         {{title}}
     </h1>
-    <app-saludar/>
+    <app-agregar-tarea/>
 </div>
