--- a/src/app/components/padre/hijo/hijo.component.html
+++ b/src/app/components/padre/hijo/hijo.component.html
@@ -1,5 +1,5 @@
-<div class="alert alert-infor w-50 mx-auto">
-    <p>
-        {{mensaje}}
-    </p>
+<div class="container">
+    <button class="btb btb-primary" (click)="enviarMensaje()">
+        Enviar
+    </button>
 </div>
