--- a/src/app/components/padre/padre.component.html
+++ b/src/app/components/padre/padre.component.html
@@ -1,2 +1,12 @@
-<p>Componente padre</p>
-<app-hijo [mensaje]="mensajePadre"/>
+<div class="container">
+    <h3 class="text-primary">
+        Componente Padre
+    </h3>
+    <app-hijo (notificarPadre)="recibirNotificacion($event)"></app-hijo>
+
+    @if (mensaje) {
+        <p class="mt-3 alert alert-info w-50 mx-auto">
+            {{mensaje}}
+        </p>
+    }
+</div>
