--- a/src/app/components/padre/hijo/hijo.component.html
+++ b/src/app/components/padre/hijo/hijo.component.html
@@ -1,5 +1,3 @@
 <div class="container">
-    <button class="btb btb-primary" (click)="enviarMensaje()">
-        Enviar
-    </button>
+ <p class="alert alert-info w-50 mx-auto"> {{mensaje}}</p>
 </div>
