--- a/src/app/components/padre/padre.component.html
+++ b/src/app/components/padre/padre.component.html
@@ -2,11 +2,9 @@
     <h3 class="text-primary">
         Componente Padre
     </h3>
-    <app-hijo (notificarPadre)="recibirNotificacion($event)"></app-hijo>
+   <app-hijo />
+   <button class="btn btn-primary mt-3" (click)="cambiarMensajeHijo()">
+    Cambiar Mensaje
+   </button>
 
-    @if (mensaje) {
-        <p class="mt-3 alert alert-info w-50 mx-auto">
-            {{mensaje}}
-        </p>
-    }
 </div>
