--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
     <h1 class="text-center text-warning">
         {{title}}
     </h1>
-    <app-padre/>
+    <p>
+        <app-listado-usuarios />
+    </p>
 </div>
