pipes en angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,5 @@
     <h1 class="text-center text-warning">
         {{title}}
     </h1>
-    <p>
-        <app-listado-usuarios />
-    </p>
+    <app-ejemplo-pipes/>
 </div>
