--- a/src/app/components/ejemplo-pipes/ejemplo-pipes.component.html
+++ b/src/app/components/ejemplo-pipes/ejemplo-pipes.component.html
@@ -4,7 +4,7 @@
     </h3>
     <ul class="list-group w-50 mx-auto">
         @for (empleado of empleados; track empleado) {
-            <li class="list-group-item d-flex justify-content-between alig-items-center">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
                 <div>
                     <h5 class="mb-1">
                         {{empleado.nombre | uppercase}}
