--- a/src/app/components/listado-usuarios/listado-usuarios.component.html
+++ b/src/app/components/listado-usuarios/listado-usuarios.component.html
@@ -1,4 +1,5 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center text-center my-2">
+    <h3 class="text-primary">Listado de usuarios:</h3>
     <div class="col-md-6">
         <ul class="list-group">
             @if(usuarios.length > 0){
