--- a/src/app/components/navegacion/navegacion.component.html
+++ b/src/app/components/navegacion/navegacion.component.html
@@ -26,5 +26,18 @@ aria-label="Toggle navigation">
             [queryParams]="{mensaje:'Nuevo-Mensaje'}">Mensaje</a>
         </li>
 
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Opciones</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                    <a class="dropdown-item" [routerLink]="['/configuracion/padre']" routerLinkActive="active">Padre</a>
+                </li>
+
+                <li>
+                    <a class="dropdown-item" [routerLink]="['/configuracion/hijo']" routerLinkActive="active">Hijo</a>
+                </li>
+            </ul>
+        </li>
+
     </ul>
 </div>
